fixed bug preventing the github logo from showing on mobile for the project link

--- a/style.css
+++ b/style.css
@@ -511,6 +511,10 @@ padding: 0%;
         display: none;
     }
 
+    .project-link-wrapper img {
+        display: block;
+    }
+
     .work-experience {
         padding-bottom: 20px;
     }
